--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,13 @@ discord.py==2.3.2
 fortune==1.1.1
 frozenlist==1.4.1
 grizzled-python==2.2.0
-hellya-lite==15.0
+hellya_lite==15.0
 idna==3.6
 multidict==6.0.4
 mutagen==1.47.0
 numpy==1.26.2
 opencv-python==4.8.1.78
-Pillow==10.1.0
+pillow==10.2.0
 pycryptodomex==3.19.0
 python-dotenv==1.0.0
 requests==2.31.0
